# Arrr-ay-llvm

./: .gitignore  CMakeLists.txt  README.md  clean.sh
grammar/: arrr_ay.g4  generate.sh
src/: main.cpp
src/ast/: AST.cpp  AST.h  BaseVisitorAST.cpp  BaseVisitorAST.h  BinaryOp.h  BuildAST.cpp  BuildAST.h  Expression.h  Node.h  Number.h  Parentheses.h  PrintAST.h  Program.h  VisitorAST.h
src/codegen/: EasyCodegen.cpp  EasyCodegen.h
src/jit/: EasyJIT.cpp  EasyJIT.h
